@@ -9,6 +9,7 @@ Version 1.0.4 to be released
 - Bug #183: Fatal error in CActiveFinder::afterFindInternal() (Qiang)
 - Bug #186: MainMenu component in yiic webapp doesn't detect active menu item correctly (Qiang)
 - Bug #187: SET CHARACTER SET is not working for MySQL in some cases (Qiang)
+- Bug #190: yiic shell command does not work when the Web application redirects by default (Qiang)
 - Bug #192: CDbLogRoute has several issues (Qiang)
 - Bug #199: yiic webapp command may fail in some directory setup (Qiang)
 - Bug #200: CDateFormatter does not recognize timestamp given as a string (Qiang)
